syntax = "proto3";

option java_multiple_files = true;
option java_package = "es.um.sisdist.backend.grpc";

package es.um.sisdist.backend.grpc;

service GrpcService
{
    rpc Ping(PingRequest) returns (PingResponse);
	rpc SendPrompt(PromptRequest) returns (PromptResponse);
}

message PingRequest
{
	int32 v = 1;
}

message PingResponse
{
	int32 v = 1;
}

// Mensajes
message PromptRequest {
    string prompt = 1;
    string dialogueId = 2;
    string timestamp = 3;
    string userId = 4;
}

message PromptResponse {
    bool success = 1;
}
